重写 201 道 Java 后端架构师题目：从通用模板改为题目专属技术内容
- 原 201 道题由单一模板生成，仅替换关键词，无真实技术内容
- 重写后每题包含：概念层/机制层(代码+命令)/实战层(真实参数)/底层本质/
  AI架构师加问/记忆口诀/苏格拉底式追问(题目专属证据链)/常见考点
- 每题约 200-600 行，平均 17 个代码块，总计 77902 行
- 苏格拉底追问的"证据"列全部改为题目专属命令/指标
  (如 JVM 用 jstat/jmap/MAT，MySQL 用 EXPLAIN/innodb_lock_waits，
  Redis 用 redis-cli --bigkeys/SLOWLOG)
- 难度规则: i%5==0→L4(40题), i%3==0→L3(52题), 其余 L2(109题)
- 修复 25 个文件的 YAML 特殊字符解析问题
- Next.js 构建通过，401 个页面全部预渲染成功